--- a/orphaned-code-detector/package.json
+++ b/orphaned-code-detector/package.json
@@ -2,9 +2,9 @@
   "name": "orphaned-code-detector",
   "version": "1.0.0",
   "description": "A GitHub Action to detect orphaned code by comparing repository code with DataDog APM/logs or analyzing PR changes",
-  "main": "dist/index.js",
+  "main": "target/index.js",
   "scripts": {
-    "build": "tsc && ncc build dist/index.js -o dist",
+    "build": "tsc && ncc build src/index.ts --out target/",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts"
@@ -18,7 +18,7 @@
     "logs",
     "typescript"
   ],
-  "author": "Your Name",
+  "author": "P&L",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
